crates/autoresolve/tests/compile_fail/missing_dependency.stderr
error[E0277]: the trait bound `Telemetry: ResolveFrom<Base>` is not satisfied
  --> tests/compile_fail/missing_dependency.rs:30:34
   |
30 |     let _client = resolver.get::<Client>();
   |                            ---   ^^^^^^ unsatisfied trait bound
   |                            |
   |                            required by a bound introduced by this call
   |
help: the trait `ResolveFrom<Base>` is not implemented for `Telemetry`
  --> tests/compile_fail/missing_dependency.rs:7:1
   |
 7 | struct Telemetry;
   | ^^^^^^^^^^^^^^^^
help: the following other types implement trait `ResolveFrom<T>`
  --> tests/compile_fail/missing_dependency.rs:15:1
   |
15 | #[resolvable]
   | ^^^^^^^^^^^^^ `Client` implements `ResolveFrom<__AutoresolveBase>`
...
29 |     let mut resolver = autoresolve::resolver!(Base, builtins: Builtins);
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Builtins` implements `ResolveFrom<Base>`
note: required for `Client` to implement `ResolveFrom<Base>`
  --> tests/compile_fail/missing_dependency.rs:15:1
   |
15 | #[resolvable]
   | ^^^^^^^^^^^^^ unsatisfied trait bound introduced here
16 | impl Client {
   |      ^^^^^^
note: required by a bound in `Resolver::<T>::get`
  --> src/resolver.rs
   |
   |     pub fn get<O>(&mut self) -> Arc<O>
   |            --- required by a bound in this associated function
   |     where
   |         O: ResolveFrom<T>,
   |            ^^^^^^^^^^^^^^ required by this bound in `Resolver::<T>::get`
   = note: this error originates in the attribute macro `resolvable` (in Nightly builds, run with -Z macro-backtrace for more info)
